--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
+    "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
-    "svg-inline-loader": "^0.8.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
