--- a/package.json
+++ b/package.json
@@ -6,22 +6,24 @@
   "scripts": {
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
-    "start:dev": "webpack-dev-server --mode=development"
+    "start:dev": "webpack-dev-server --mode=development",
+    "start": "webpack-dev-server --mode=production"
   },
   "keywords": [
     "pug",
     "webpack",
     "html",
-    "css"
+    "css",
+    "sass",
+    "jquery",
+    "javascript"
   ],
   "author": "Danil Popov <zabastx@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
-    "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
-    "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
@@ -32,6 +34,7 @@
     "node-sass": "^4.14.1",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
+    "px-jquery-pagination": "^1.0.6",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
