--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
