--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "^4.3.0",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
+    "masonry-layout": "^4.2.2",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
@@ -37,6 +38,7 @@
     "pug-loader": "^2.4.0",
     "px-jquery-pagination": "^1.0.6",
     "sass-loader": "^9.0.2",
+    "slick-carousel": "^1.8.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
